--- a/periodictable.html
+++ b/periodictable.html
@@ -20,7 +20,7 @@
         <td bgcolor="blue">3 <br>Li</td>
         <td bgcolor="lavender" >4 <br>Be</td>
         <td colspan="10"></td>
-        <td>5 <br>B</td>
+        <td bgcolor="yellow">5 <br>B</td>
         <td bgcolor="cyan">6 <br>C</td>
         <td bgcolor="cyan">7 <br>N</td>
         <td bgcolor="cyan">8 <br>O</td>
